--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -5,3 +5,11 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
+
+
+dubbo:
+  application:
+    name: unit-application
+  registry:
+    id: zk-registry
+    address: zookeeper://47.110.130.104:2181
