--- a/pom.xml
+++ b/pom.xml
@@ -98,13 +98,23 @@
             <version>2.7.8</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.apache.curator/curator-framework -->
         <dependency>
             <groupId>org.apache.curator</groupId>
             <artifactId>curator-framework</artifactId>
-            <version>5.1.0</version>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.8.0</version>
         </dependency>
 
+        <!-- 业务依赖 -->
+        <dependency>
+            <groupId>top.truism</groupId>
+            <artifactId>spring-bbot-unit-test-interface</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
